# AI_DIGITAL_TWIN

./: Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_add_bio_to_users.py
app/: config.py  dependencies.py  main.py
app/api/v1/: auth.py  chat.py  memory.py  personality.py  router.py
app/core/: database.py  embedder.py  exceptions.py  qdrant_client.py  security.py
app/models/: __init__.py  chat.py  decision.py  personality.py  user.py
app/repositories/: chat_repo.py  memory_repo.py  personality_repo.py  user_repo.py
app/schemas/: auth.py  chat.py  memory.py  personality.py
app/services/: ai_service.py  auth_service.py  chat_service.py  email_service.py  memory_service.py  personality_service.py  prompt_builder.py
app/templates/emails/: welcome.html
app/utils/: email_templates.py
app/workers/: personality_updater.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_chat_api.py
tests/unit/: test_memory_service.py  test_personality_service.py  test_prompt_builder.py
