[project]
name = "ai-digital-twin"
version = "0.1.0"
description = "A production-grade FastAPI backend that creates a continuously evolving personal AI clone."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic==1.13.1",
    "anyio==4.3.0",
    "argon2-cffi>=25.1.0",
    "asyncpg==0.29.0",
    "celery==5.4.0",
    "fakeredis==2.23.1",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "locust==2.27.0",
    "loguru==0.7.2",
    "numpy<2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "qdrant-client==1.9.1",
    "redis==5.0.4",
    "sqlalchemy[asyncio]==2.0.30",
    "uvicorn[standard]==0.29.0",
]
